added login and register user apis

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@
  CLOUDINARY_API_KEY = "587767425128229"
  CLOUDINARY_SECRET_KEY = "rV8-0r8godvfmDwECtDlwKGV2Tc"
  CLOUDINARY_NAME = "doaimjxpl"
+ JWT_SECRET = "kushu"
